# rabbitmq-lvc-plugin

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  COPYING  LICENSE-MPL-rabbitmq-lvc-plugin  MODULE.bazel  Makefile  README.md  app.bzl  erlang.mk  helpers.bzl  moduleindex.yaml  package.mk
.github/workflows/: bazel-test-nightly.yml  bazel-test.yml  nightly.yml  plugin-release.yml  release.yml  test.yml
compiled/3.0.x/: rabbitmq_lvc-3.0.x.ez
compiled/3.1.x/: rabbitmq_lvc-3.1.x.ez
ebin/: rabbit_lvc_plugin.app  rabbitmq_lvc.app
include/: rabbit_lvc_plugin.hrl
src/: rabbit_exchange_type_lvc.erl  rabbit_lvc_plugin.erl  rabbit_lvc_plugin_sup.erl  rabbitmq_lvc.app.src
test/: lvc_SUITE.erl
test/src/: rabbit_lvc_test.erl
